Wed Jan 14 16:35:43 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/DynAny_Test/test_dynsequence.cpp:

          Fixed a memory leak.

Tue Jan 13 11:30:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/server.cpp:
          Fixed unicode error

Tue Jan 13 08:53:46 UTC 2009  Marcel Smit <msmit@remedy.nl>

        * tests/POA/Forwarding/run_test.pl:
        * tests/POA/EndpointPolicy/run_test.pl:
        * tests/POA/Persistent_ID/run_test.pl:
        * tests/POA/Reference_Counting/run_test.pl:
          Made "fuzz" compliant.

        * tests/Portable_Interceptors/Bug_3079/run_test.pl
          Improved test script.

Mon Jan 12 18:41:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp (register_if_necessary):
          Don't check if the transport is registered, we could get a thread
          switch between the check and the registration. Also only when the
          register_handler returns -1 we have a failure, with 1 it is already
          registered. This fixes bugzilla 3543

        * tao/Wait_On_Read.cpp:
        * tao/Wait_Strategy.cpp:
          Layout change

        * tao/Wait_Strategy.h:
          Doxygen change

        * tao/Exception.h:
          Layout changes

Mon Jan 12 18:26:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/master.cpp:
        * tests/Bug_3543_Regression/run_test.pl:
        * tests/Bug_3543_Regression/server.cpp:
          Do a controlled shutdown

Mon Jan 12 16:00:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/Bug_3543_Regression.mpc:
          These executables use threads

        * tests/Bug_3543_Regression/master.cpp:
          Fixed fuzz errors

Mon Jan 12 15:42:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/Bug_3543_Regression.mpc:
        * tests/Bug_3543_Regression/master.cpp: